--- a/src/samui/frontend/src/components/RuleEditors/FormEditor.styl
+++ b/src/samui/frontend/src/components/RuleEditors/FormEditor.styl
@@ -2,5 +2,9 @@ button
 	margin: 10px 10px 10px 0
 	padding-left: 0
 
+textarea.ant-input
+	font-family: "Hack"
+
 .ant-input-group-wrapper
 	padding-bottom: 10px
+
