--- a/src/samui/frontend/src/components/GlobalHeader/GlobalHeader.styl
+++ b/src/samui/frontend/src/components/GlobalHeader/GlobalHeader.styl
@@ -6,6 +6,9 @@
   box-shadow: 0 1px 4px rgba(0, 21, 41, .08)
   position: relative
 
+  .ant-btn
+    margin: 0 10px
+
 :global
   .ant-layout
     min-height: 100vh
