[webui] Put Baselines behind feature flag

--- a/src/webui/frontend/src/components/GlobalHeader/GlobalHeader.styl
+++ b/src/webui/frontend/src/components/GlobalHeader/GlobalHeader.styl
@@ -26,6 +26,9 @@
     display: inline-block
     vertical-align: middle
 
+.ant-dropdown-menu-item
+  .ant-checkbox-wrapper
+    user-select: none;
 
 .menu
   :global(.anticon)
