--- a/src/webui/frontend/src/components/RuleEditors/RawEditor.styl
+++ b/src/webui/frontend/src/components/RuleEditors/RawEditor.styl
@@ -4,3 +4,17 @@ button
 textarea.ant-input
   margin: 10px 10px 10px 0
   font-family: "Hack"
+
+
+.cm-content, .cm-gutter
+  min-height 550px
+
+.cm-gutters
+  margin 1px
+
+.cm-scroller
+  overflow hidden
+
+.cm-wrap
+  border 1px solid silver
+  overflow-x hidden
