--- a/src/webui/frontend/src/routes/Dashboard/Connectors.styl
+++ b/src/webui/frontend/src/routes/Dashboard/Connectors.styl
@@ -5,3 +5,10 @@
 
 pre
   white-space: pre-wrap;
+
+.custom-hover
+  transition all 0.8s ease
+  transition all 0.8s ease
+  &:hover
+    box-shadow 0 0 5px #51cbee
+    box-shadow 0 0 5px #51cbee
